added 2nd section. class .about can be used for OurWork section

--- a/css/main.css
+++ b/css/main.css
@@ -213,3 +213,22 @@ main {
 	background: #10c9c3;
 	color: white;
 }
+
+.about {
+	padding: 100px 15px;
+	text-align: center;
+}
+
+.about h2 {
+	margin-bottom: 2.5rem;
+}
+
+.about p {
+	margin-bottom: 2.5rem;
+}
+
+.about .container {
+	flex-direction: column;
+	width: 625px;
+	align-items: center;
+}
