--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,9 +14,24 @@
 	}
 }
 
+@media screen and (max-width: 1000px) {
+	.product {
+		width: 50%;
+	}
+
+	.product:nth-child(2n+1) {
+		/*margin-bottom: 60px;*/
+		margin-bottom: 3.75rem;
+	}
+}
+
 @media screen and (max-width: 952px) {
 	.result {
 		width: 50%;
+	}
+
+	.result:nth-child(1) {
+		margin-bottom: 30px;
 	}
 
 }
@@ -184,7 +199,10 @@
 @media screen and (max-width: 400px) {
 	.result {
 		width: 100%;
-		margin-bottom: 20px;
+	}
+
+	.result:not(:last-child) {
+		margin-bottom: 30px;
 	}
 }
 
