--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,6 +36,12 @@
 
 }
 
+@media screen and (max-width: 900px) {
+	.quote .container {
+		max-width: 100%;
+	}
+}
+
 @media screen and (max-width: 850px) and (max-height: 500px) {
 /*	.process {
 		position: relative;
@@ -50,7 +56,17 @@
 @media screen and (max-width: 850px) and (min-height: 500px) {
 	.process-video {
 		height: 300px;
-		
+	}
+}
+
+@media screen and (max-width: 800px) {
+	.quote {
+		padding-top: 100px;
+		padding-bottom: 100px;
+	}
+
+	.slick-dots {
+		bottom: -82px;
 	}
 }
 
@@ -155,12 +171,6 @@
 }
 
 @media screen and (max-width: 600px) {
-	.about .container h2, .about .container p { 
-		width: 100%;
-	}
-}
-
-@media screen and (max-width: 600px) {
 	html {
 		font-size: 12px;
 	}
@@ -168,6 +178,10 @@
 	.about {
 		padding-top: 50px;
 		padding-bottom: 50px;
+	}
+
+	.about .container h2, .about .container p { 
+		width: 100%;
 	}
 
 	.skills {
@@ -180,10 +194,18 @@
 		padding-bottom: 50px;
 	}
 
+	.quote {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+
 	.skills-content {
 		width: 75%;
 	}
 
+	.slick-dots {
+		bottom: -40px;
+	}
 }
 
 @media screen and (max-width: 512px) {
