--- a/css/main.css
+++ b/css/main.css
@@ -580,3 +580,18 @@ iframe.process-video {
 	height: 0.625rem;
 }
 
+.clients {
+	padding: 67px 15px;
+}
+
+.clients-holder {
+	display: flex;
+	/*align-items: center;*/
+	justify-content: space-around;
+	width: 100%;
+}
+
+/*.clients-holder img {
+	height: 70px;
+	width: auto;
+}*/
