browser prefixes added

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,14 @@
 @media screen and (max-width: 1024px) {
 	.hello {
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 
 	.text-container {
-		align-items: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		text-align: center;
 		width: 75%;
 	}
@@ -107,15 +111,21 @@
 	.burger-btn span::after {
 		content: '';
 		display: block;
+		-webkit-transition: 0.2s;
+		-o-transition: 0.2s;
 		transition: 0.2s;
 	}
 		
 	.burger-btn span::before {
-		transform: translateY(-5px);
+		-webkit-transform: translateY(-5px);
+		    -ms-transform: translateY(-5px);
+		        transform: translateY(-5px);
 	}
 		
 	.burger-btn span::after {
-		transform: translateY(5px);
+		-webkit-transform: translateY(5px);
+		    -ms-transform: translateY(5px);
+		        transform: translateY(5px);
 	}
 
 	.burger-btn_active span {
@@ -123,24 +133,37 @@
 	}
 
 	.burger-btn_active span:before {
-		transform: rotate(45deg);
+		-webkit-transform: rotate(45deg);
+		    -ms-transform: rotate(45deg);
+		        transform: rotate(45deg);
 	}
 
 	.burger-btn_active span:after {
-		transform: rotate(-45deg);
+		-webkit-transform: rotate(-45deg);
+		    -ms-transform: rotate(-45deg);
+		        transform: rotate(-45deg);
 	}
 
 	.burger-nav_active {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 		width: 300px;
 		text-align: center;
 		width: 90%;
 	}
 	
 	.burger-menu_active {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 		width: 100%;
 	}
 
@@ -234,8 +257,13 @@
 	}
 
 	.clients-holder {
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 	}
 	.clients-holder img {
 		height: auto;
@@ -252,7 +280,8 @@
 
 	
 	footer .container {
-		flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		    flex-wrap: wrap;
 	}
 	.rights {
 		width: 50%;
@@ -261,7 +290,9 @@
 	.contacts {
 		width: 50%;
 		margin: 0;
-		align-items: flex-end;
+		-webkit-box-align: end;
+		    -ms-flex-align: end;
+		        align-items: flex-end;
 	}
 
 
@@ -312,6 +343,7 @@
 
 	.text-container {
 		height: 100%;
-		justify-content: space-around;
+		-ms-flex-pack: distribute;
+		    justify-content: space-around;
 	}
 }
