--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,8 @@ body {
 }
 
 *{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 
 a, a:hover, a:visited, a:focus, a:active {
@@ -97,6 +98,8 @@ p {
 }
 
 .container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	max-width: 1170px;
 }
@@ -109,12 +112,19 @@ header {
 }
 
 header, section {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 header a {
-	user-select: none;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
 
 }
 
@@ -124,24 +134,34 @@ nav a:focus {
 }
 
 header a:active {
-	transform: translateY(1px);
-   	filter: saturate(150%);
+	-webkit-transform: translateY(1px);
+	    -ms-transform: translateY(1px);
+	        transform: translateY(1px);
+   	-webkit-filter: saturate(150%);
+   	        filter: saturate(150%);
 }
 
 .button:hover {
-	box-shadow: inset 0 -5px 10px 1px #00000064;
+	-webkit-box-shadow: inset 0 -5px 10px 1px #00000064;
+	        box-shadow: inset 0 -5px 10px 1px #00000064;
 }
 .button:focus {
 	border: solid 1px;
 }
 
 .button:active {
-	transform: translateY(1px);
-   	filter: saturate(150%);
+	-webkit-transform: translateY(1px);
+	    -ms-transform: translateY(1px);
+	        transform: translateY(1px);
+   	-webkit-filter: saturate(150%);
+   	        filter: saturate(150%);
 }
 
 .button {
-	user-select: none;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
 }
 
 .header_scrolled {
@@ -151,7 +171,9 @@ header a:active {
 }
 
 .header-container {
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 100%;
 
 }
@@ -166,8 +188,12 @@ header a:active {
 }
 
 nav {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 620px; 	/*min header width 651px*/
 }
 
@@ -182,8 +208,12 @@ main {
 }
 
 .hello {
-	justify-content: flex-end;
-	align-items: center;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .hello p {
@@ -193,10 +223,19 @@ main {
 }
 
 .text-container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: space-between;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 50%;
 
 }
@@ -222,9 +261,14 @@ a.button {
 }
 
 .about .container {
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	width: 625px;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .loading {
@@ -260,7 +304,10 @@ a.button {
 
 .skills-content {
 	width: 50%;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
 .results {
@@ -270,9 +317,15 @@ a.button {
 
 .result {
 	width: 25%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 .result-text h4:last-of-type {
@@ -281,28 +334,46 @@ a.button {
 
 .results .container {
 	width: 100%;
-	justify-content: space-between;
-	flex-wrap: wrap;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 }
 
 .result-text {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	margin-left: 25px;
 	width: 11rem;
 }
 
 .result img {
-	object-fit: contain;
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 
 .galery .container {
 	max-width: none;
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .galery-load-more-btn {
@@ -313,12 +384,21 @@ a.button {
 	text-transform: uppercase;
 	color: #8e8e8e;
 	height: 100px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	background: #f5f5f5;
 	width: 100%;
-	justify-content: center;
-	user-select: none;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-user-select: none;
+	   -moz-user-select: none;
+	    -ms-user-select: none;
+	        user-select: none;
 }
 
 .galery-load-more-btn:active {
@@ -361,8 +441,11 @@ a.button {
 }
 
 .galery-holder {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 	
 }
 
@@ -396,9 +479,17 @@ iframe.process-video {
 	left: 0;	
 	background: #e9e9e9 url(https://lightbox-prod.imgix.net/images/uploads/1524001021276-adventure-time-_16x9_1920x1080_showpage.jpg) no-repeat center center / cover;
 
+	display: -webkit-box;
+
+	display: -ms-flexbox;
+
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .play-button {
@@ -407,9 +498,17 @@ iframe.process-video {
 	border-radius: 50%;
 	background: #10c9c3;
 
+	display: -webkit-box;
+
+	display: -ms-flexbox;
+
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .disp-none {
@@ -423,21 +522,36 @@ iframe.process-video {
 
 .products .container {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 }
 
 .product {
 	width: 25%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .product-content {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	text-align: center;
 	/*width: 230px;*/
 	width: 14.375rem;
@@ -494,9 +608,15 @@ iframe.process-video {
 }
 
 .slick-dots {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 100%;
 	
 	margin: 0;
@@ -536,9 +656,12 @@ iframe.process-video {
 }
 
 .clients-holder {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	/*align-items: center;*/
-	justify-content: space-around;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
 	width: 100%;
 }
 
@@ -547,8 +670,11 @@ iframe.process-video {
 }
 
 .order-form {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
 
 }
 
@@ -568,7 +694,9 @@ iframe.process-video {
 /**/
 .cell.cell-row {
 	width: 1px;
-	flex-grow: 1;
+	-webkit-box-flex: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 }
 
 .cell-row + .cell-row {
@@ -581,8 +709,12 @@ iframe.process-video {
 
 footer {
 	background: black;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	font-size: 0.9375rem;
 	color: #bcbcbc;
 	padding: 100px 15px;
@@ -603,13 +735,22 @@ footer h2 {
 
 footer .container {
 	width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 } 
 
 .footer-content-box {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
 .rights {
@@ -628,4 +769,3 @@ footer .container {
 .links {
 	margin-left: auto;
 }
-
